<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvClassName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Clase de Primero A"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayoutButtons"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/btnEditClass"
                android:layout_width="48dp" android:layout_height="48dp"
                android:src="@drawable/ic_edit"
                android:contentDescription="@string/teacher_item_cd_edit_class" android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/primary_color"
                android:layout_marginEnd="8dp"/>

            <ImageButton
                android:id="@+id/btnDeleteClass"
                android:layout_width="48dp" android:layout_height="48dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/teacher_item_cd_delete_class" android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/color_warning" android:layout_marginEnd="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccessClass"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_item_button_access" /> </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>