<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="2dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <ImageView
            android:id="@+id/ivStudentItemProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_default_profile"
            android:contentDescription="@string/cd_student_profile_icon_in_list" />

        <TextView
            android:id="@+id/tvStudentItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivStudentItemProfile"
            app:layout_constraintTop_toTopOf="@id/ivStudentItemProfile"
            app:layout_constraintEnd_toStartOf="@+id/ivStudentItemNotification"
            tools:text="Nombre Completo del Alumno" />

        <TextView
            android:id="@+id/tvStudentItemLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            app:layout_constraintStart_toEndOf="@id/ivStudentItemProfile"
            app:layout_constraintTop_toBottomOf="@id/tvStudentItemName"
            app:layout_constraintEnd_toStartOf="@+id/ivStudentItemNotification"
            app:layout_constraintBottom_toBottomOf="@id/ivStudentItemProfile"
            tools:text="Nivel: 5" />

        <ImageView
            android:id="@+id/ivStudentItemNotification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_notifications_none"
            android:contentDescription="@string/cd_student_notification_status"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/btnRemoveStudentFromClass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            tools:visibility="visible"/>

        <ImageButton
            android:id="@+id/btnRemoveStudentFromClass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_remove_student_from_class"
            android:src="@drawable/ic_person_remove"
            app:tint="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>